@@ -32,6 +32,7 @@
         - Add support for pagination information to retrieve by plugins.
         - Buttongroup menus can be opened at different positions.
         - Fix buttongroup anchoring if anchor doesn't exist.
+        - Introduce pagination panel.
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
